<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.stockexample.CompanyInformationActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <RelativeLayout  android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="#000000">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/info_name"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/blank"
            android:textSize="30sp"
            android:textColor="#FFFFFFFF"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/info_symbol"
            android:layout_below="@+id/info_name"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/blank"
            android:textSize="25sp"
            android:textColor="#C6C6C6"/>

        <LinearLayout
            android:id="@+id/info_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/info_symbol"
            android:orientation="vertical">

            <LinearLayout
                android:layout_marginTop="25dp"
                android:id="@+id/price_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/info_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_price"
                    android:textSize="22sp"
                    android:textStyle="italic"
                    android:textColor="#FFFFFFFF"/>
                <TextView
                    android:id="@+id/info_price_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blank"
                    android:textSize="22sp"
                    android:textColor="#C6C6C6"
                    android:gravity="center|right"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="25dp"
                android:id="@+id/change_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/info_change"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_change"
                    android:textSize="22sp"
                    android:textStyle="italic"
                    android:textColor="#FFFFFFFF"/>
                <TextView
                    android:id="@+id/info_change_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blank"
                    android:textSize="22sp"
                    android:textColor="#C6C6C6"
                    android:gravity="center|right"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="25dp"
                android:id="@+id/todayslow_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/info_todayslow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_todayslow"
                    android:textSize="22sp"
                    android:textStyle="italic"
                    android:textColor="#FFFFFFFF"/>
                <TextView
                    android:id="@+id/info_todayslow_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blank"
                    android:textSize="22sp"
                    android:textColor="#C6C6C6"
                    android:gravity="center|right"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="25dp"
                android:id="@+id/todayshigh_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/info_todayshigh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_todayshigh"
                    android:textSize="22sp"
                    android:textStyle="italic"
                    android:textColor="#FFFFFFFF"/>
                <TextView
                    android:id="@+id/info_todayshigh_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blank"
                    android:textSize="22sp"
                    android:textColor="#C6C6C6"
                    android:gravity="center|right"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="25dp"
                android:id="@+id/yearslow_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/info_yearslow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_yearslow"
                    android:textSize="22sp"
                    android:textStyle="italic"
                    android:textColor="#FFFFFFFF"/>
                <TextView
                    android:id="@+id/info_yearslow_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blank"
                    android:textSize="22sp"
                    android:textColor="#C6C6C6"
                    android:gravity="center|right"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="25dp"
                android:id="@+id/yearshigh_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/info_yearshigh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_yearshigh"
                    android:textSize="22sp"
                    android:textStyle="italic"
                    android:textColor="#FFFFFFFF"/>
                <TextView
                    android:id="@+id/info_yearshigh_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blank"
                    android:textSize="22sp"
                    android:textColor="#C6C6C6"
                    android:gravity="center|right"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="25dp"
                android:id="@+id/marketcap_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/info_marketcap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_marketcap"
                    android:textSize="22sp"
                    android:textStyle="italic"
                    android:textColor="#FFFFFFFF"/>
                <TextView
                    android:id="@+id/info_marketcap_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blank"
                    android:textSize="22sp"
                    android:textColor="#C6C6C6"
                    android:gravity="center|right"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="25dp"
                android:id="@+id/volume_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/info_volume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_volume"
                    android:textSize="22sp"
                    android:textStyle="italic"
                    android:textColor="#FFFFFFFF"/>
                <TextView
                    android:id="@+id/info_volume_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blank"
                    android:textSize="22sp"
                    android:textColor="#C6C6C6"
                    android:gravity="center|right"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="25dp"
                android:id="@+id/avgvolume_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/info_avgvolume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_avgvolume"
                    android:textSize="22sp"
                    android:textStyle="italic"
                    android:textColor="#FFFFFFFF"/>
                <TextView
                    android:id="@+id/info_avgvolume_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blank"
                    android:textSize="22sp"
                    android:textColor="#C6C6C6"
                    android:gravity="center|right"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="25dp"
                android:id="@+id/exchange_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/info_exchange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_exchange"
                    android:textSize="22sp"
                    android:textStyle="italic"
                    android:textColor="#FFFFFFFF"/>
                <TextView
                    android:id="@+id/info_exchange_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blank"
                    android:textSize="22sp"
                    android:textColor="#C6C6C6"
                    android:gravity="center|right"/>

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/news_button"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:textColor="#FFFFFFFF"
                android:id="@+id/news_button"/>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>